Avoid using trunk8 for truncation
We can use CSS. Trunk8 is no longer maintained and there's a css alternative

--- a/app/assets/stylesheets/modules/accordion-sections.scss
+++ b/app/assets/stylesheets/modules/accordion-sections.scss
@@ -52,6 +52,9 @@
     .snippet {
       color: $sul-mini-accordion-text-color;
       @extend .remove-list-styles;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .details {
